butt-templates/addons/thedefiler.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: thedefiler
  namespace: kube-system
  labels:
    kubernetes.io/cluster-service: "true"
spec:
  template:
    metadata:
      labels:
        app: thedefiler
    spec:
      imagePullSecrets:
      - name: {secret}
      containers:
      - name: thedefiler
        image: {image}
        imagePullPolicy: Always
