butt-templates/addons/thedefiler-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: defilerversioner
  namespace: kube-system
spec:
  ports:
  - port: 9656
    protocol: TCP
    targetPort: 9656
    nodePort: 30656
  selector:
    app: thedefiler
  type: NodePort
