butt-templates/addons/dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "dashboard-ingress"
  namespace: kube-system
spec:
  rules:
  - host: "{dashboardFQDN}"
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
